--- a/mattapi.yaml
+++ b/mattapi.yaml
@@ -17,6 +17,8 @@ spec:
   type: openapi
   lifecycle: production
   owner: the-a-team
+  providesApis:
+    - petstore
   definition: |
     openapi: "3.0.0"
     info:
